airflow-section-7/aws-alb-ingress-object.yml
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-k8s
  labels:
    app: airflow-k8s
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: airflow-k8s-web
              servicePort: 8080
